# rook-vs-bishop

./: README.md  setup.cfg
rook_vs_bishop/: __main__.py  board.py  constants.py  game.py  game_utils.py
tests/: test_game_utils.py
