[metadata]
name = rook_vs_bishop
version = 0.0.1
author = Cole Ward
author_email = colelward@gmail.com
description = Play a game of Rook vs Bishop
long_description = README
test_suite=tests

[options]
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    colorama==0.4.4
    requests==2.27.1

[options.entry_points]
console_scripts =
    rook_vs_bishop = rook_vs_bishop.__main__:main
